visib fix

--- a/css/styling.css
+++ b/css/styling.css
@@ -30,14 +30,6 @@
     src: url(../fonts/couture-bld.otf);
 }
 
-/*BEFORE WEBSITE LOADS*/
-
-#override{
-    visibility: hidden;
-}
-
-/*ONCE WEBSITE HAS LOADED*/
-
 section:before {
     height: 0vh;
     content: "";
